# gama

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  configure.ac
.var/how-to-cite/: .gitignore  Makefile  gama-manual.bib  gama-manual.tex
doc/: README  gama-install.texi  gama-introduction.texi  gama-local-adj.texi  gama-local-input.texi  gama-local.texi  gama.texi
lib/: Makefile.am
lib/gnu_gama/: comb.cpp  comb.h  e3.h  ellipsoid.h  ellipsoids.h  exception.h  gon2deg.h  index.h  intfloat.h  latlong.h  list.h  model.h  movetofront.h  obsdata.h  outstream.h  pointbase.h  radian.h  simplified.cpp  simplified.h  size_to.cpp  size_to.h  statan.cpp  statan.h  utf8.h  version.cpp  version.h  visitor.h  xml_expat.h
lib/gnu_gama/adj/: adj.cpp  adj.h  adj_base.h  adj_basefull.h  adj_basesparse.h  adj_chol.h  adj_chol_implementation.h  adj_envelope.h  adj_envelope_implementation.h  adj_gso.h  adj_input_data.cpp  adj_input_data.h  adj_svd.h  envelope.h  homogenization.h
lib/gnu_gama/g3/: g3_adjres.cpp  g3_adjres.h  g3_cluster.cpp  g3_cluster.h  g3_model.cpp  g3_model.h  g3_model_init.cpp  g3_model_linearization.cpp  g3_model_write_xml_adjustment_results.cpp  g3_observation.h  g3_parameter.h  g3_point.cpp  g3_point.h  g3_write_observation_xml.h
lib/gnu_gama/local/: acord.cpp  acord.h  angobs.h  bearing.cpp  bearing.h  c_api.h  cluster.h  exception.h  float.h  format.cpp  gamadata.h  html.cpp  html.h  language.cpp  language.h  lcoords.h  linearization.h  local_linearization.h  local_revision.h  localnetwork2sql.cpp  localnetwork2sql.h  lpoint.h  matvec.h  network.cpp  network.h  observation.cpp  observation.h  observation_local.cpp  orientation.cpp  orientation.h  pointid.cpp  pointid.h  revision.h  svg.cpp  svg.h  test_linearization_visitor.cpp  test_linearization_visitor.h  writevisitor.h
lib/gnu_gama/local/acord/: approx_heights.cpp  approx_heights.h  approx_vectors.h  reduce_observations.cpp  reduce_observations.h  reduce_to_ellipsoid.cpp  reduce_to_ellipsoid.h
lib/gnu_gama/local/median/: g2d_cogo.cpp  g2d_cogo.h  g2d_coordinates.cpp  g2d_coordinates.h  g2d_exception.h  g2d_helper.cpp  g2d_helper.h  g2d_point.cpp  g2d_point.h
lib/gnu_gama/local/pobs/: write.cpp
lib/gnu_gama/local/results/text/: adjusted_observations.h  adjusted_unknowns.h  error_ellipses.h  fixed_points.h  general_parameters.h  outlying_abs_terms.h  reduced_observations.h  reduced_observations_to_ellipsoid.h  residuals_observations.h  underline.h
lib/gnu_gama/sparse/: intlist.h  sbdiagonal.h  smatrix.h  smatrix_graph.h  smatrix_ordering.h  svector.h
lib/gnu_gama/xml/: baseparser.cpp  baseparser.h  dataobject.cpp  dataobject.h  dataparser.cpp  dataparser.h  dataparser_g3.cpp  encoding.h  encoding_unknown_handler.cpp  gkfparser.cpp  gkfparser.h  htmlparser.cpp  htmlparser.h  localnetwork_adjustment_results.cpp  localnetwork_adjustment_results.h  localnetwork_adjustment_results_data.h  localnetworkoctave.cpp  localnetworkoctave.h  localnetworkxml.cpp  localnetworkxml.h
lib/matvec/: array.h  bandmat.h  choldec.h  covmat.h  gso.h  hilbert.h  inderr.h  jacobian.h  mat.h  matbase.h  matvec.h  matvecbase.h  memrep.h  pinv.h  sortvec.h  svd.h  symmat.h  transmat.h  transvec.h  unsigned.h  vec.h  vecbase.h
m4/: README
scripts/: Makefile.am  build-dictionaries.sh  build-ellipsoids.sh  ellipsoids_xml.cpp  slovnikar.cpp
tests/: .gitignore  CMakeLists.txt  Makefile.am
tests/gama-g3/: .gitignore  Makefile.am
tests/gama-g3/input/: Makefile.am  demo-g3-01-adj.xml  demo-g3-01.xml  demo-g3-02-adj.xml  demo-g3-02.xml  demo-g3-03-adj.xml  demo-g3-03.xml
tests/gama-g3/input/1.10/: demo-g3-01-adj.xml  demo-g3-02-adj.xml  demo-g3-03-adj.xml
tests/gama-g3/input/sjtsk05/: dopnul.xml  md5sum.txt  vyberova_udrzba.xml
tests/gama-g3/scripts/: Makefile.am  check_adjustment.cpp  gama-g3-adjustment.in  gama-g3-xmllint-xsd.in
tests/gama-local/: CMakeLists.txt  Makefile.am
tests/gama-local/input/: Makefile.am  azimuth-azimuth.gkf  extern-azimuth-distance.gkf  extern-azimuth-distance.xml  extern-seq-dsuloha-d.gkf  extern-seq-dsuloha-d.xml  extern-tst-tetrahedron-3-gon.gkf  extern-tst-tetrahedron-3-gon.xml  stroner-levelling-a.gkf  stroner-levelling-a.xml  stroner-levelling-b.gkf  stroner-levelling-b.xml  triangle-1.gkf  triangle-1.xml  triangle-2.gkf  triangle-2.xml  zoltan-test_3d_gon.gkf
tests/gama-local/scripts/: Makefile.am  check_html.cpp  check_version.cpp  check_xml_xml.cpp  compare_xml_adjustment.cpp  gama-local-adjustment.in  gama-local-equivalents.in  gama-local-version.in  octave-gama-local-read.in
tests/matvec/: .gitignore  Makefile.am  matvec-basic.cpp  matvec_demo_001.cpp  matvec_demo_002.cpp  matvec_demo_003.cpp  matvec_demo_004.cpp  matvec_demo_005.cpp  matvec_demo_006.cpp  matvec_test_001.cpp  matvec_test_002.cpp  matvec_test_003.cpp  matvec_test_004.cpp  matvec_test_005.cpp  simple-inversion.cpp  sparse-demo.cpp
tests/statan/: .gitignore  Makefile.am  chi2_critical_values.cpp  kolmogorov_smirnov_cdf.cpp  normal_critical_values.cpp  normal_distribution.cpp  student_critical_values.cpp
xml/: Makefile.am  gama-local-adjustment.xsd  gama-local.xsd  gnu-gama-data.xsd
xml/lang/: README
xml/lang/en/: pobs.lang
xml/lang/hu/: gama-local.hu.lang  gamalib.hu.lang  gkfparser.hu.lang  network.hu.lang  review.hu.lang
