EXTRA_DIST = demo-g3-01.xml demo-g3-01-adj.xml \
             demo-g3-02.xml demo-g3-02-adj.xml \
             demo-g3-03.xml demo-g3-03-adj.xml \
             sjtsk05/dopnul.xml \
             sjtsk05/dopnul.adj.xml \
             sjtsk05/vyberova_udrzba.xml \
             sjtsk05/vyberova_udrzba.adj.xml
